
  From Jeff Squyres:

  - Documentation changes:  Use $CPPDEFINES instead of $CCFLAGS in man
    page examples.

  From Levi Stephen:

  - Allow $JARCHDIR to be expanded to other construction variables.

  From Amir Szekely:

  - When calling the resource compiler on MinGW, add --include-dir and
    the source directory so it finds the source file.

  From Greg Ward:

  - Fix a misplaced line in the man page.

  From Christoph Wiedemann:

  - Add an Environment.SetDefault() method that only sets values if
    they aren't already set.

  - Have the qt.py Tool not override variables already set by the user.

  - Add separate $QT_BINPATH, $QT_CPPPATH and $QT_LIBPATH variables
    so these can be set individually, instead of being hard-wired
    relative to $QTDIR.

  - The %TEMP% and %TMP% external environment variables are now propagated
    automatically to the command execution environment on Windows systems.

  - A new --config= command-line option allows explicit control of
    of when the Configure() tests are run:  --config=force forces all
    checks to be run, --config=cache uses all previously cached values,
    --config=auto (the default) runs tests only when dependency analysis
    determines it's necessary.

  - The Configure() subsystem can now write a config.h file with values
    like HAVE_STDIO_H, HAVE_LIBM, etc.

  - The Configure() subsystem now executes its checks silently when the
    -Q option is specified.

  - The Configure() subsystem now reports if a test result is being
    taken from cache, and prints the standard output and error output
    of tests even when cached.

  - Configure() test results are now reported as "yes" or "no" instead of
    "ok" or "failed."

  - Fixed traceback printing when calling the env.Configure() method
    instead of the Configure() global function.

  - The Configure() subsystem now caches build failures in a .sconsign
    file in the subdirectory, not a .cache file.  This may cause